changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

crossedite/Makefile.in:  Modify to use $(MAKE) instead of make when 
descending into subdirectories - fixes compilation on FreeBSD - MSW 5/17/2000

socket/init.c:  Fix incorrect check on return value from fread when
loading xpm images.  MSW 5/17/2000

Fix server/spell_effect.c - was assigning altar->other_arch to an object
and not archetype MSW 5/16/2000

server/spell_effect.c: magic_wall():  Duration of darkness spell now
implemented with op->stats.food.  This avoids problems with very low
speed values that were interpreted as infinite duration.
lib/spell_params:  Changed duration parameters of darkness spell to
give a reasonable duration with the new formula.
- Jan Echternach 16/5/2000

common/living.c: drain_stat():  There are 7 stats now, not 6.
- Jan Echternach 15/5/2000

server/rune.c: rune_attack():  Check that victim still exists after
hit_player() was missing.  This fixes server crashes if monster applied
a chest, found a diseased needle and was killed by it.
- Jan Echternach 15/5/2000

server/spell_effect.c: cast_charm():  out_of_map() check was missing.
This fixes server crashes when a player casted this spell near the
edge of a map.  - Jan Echternach 15/5/2000


Make image files and code more generic.  This was largely done to make
adding support for png files easier, but in reality, it means adding support
for any new file format is now trivially easy.  Format of the image
file is:
IMAGE <image num> <datalen> <image name>\n
followed by the image data.
This allows support for binary image formats (png), but also means that